--- a/src/main/resources/gui/fxml/mainFrame.fxml
+++ b/src/main/resources/gui/fxml/mainFrame.fxml
@@ -18,13 +18,19 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.MainFrameController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.MainFrameController">
    <children>
       <Label layoutX="32.0" layoutY="30.0" text="Hello World, Onkyo AVR Control" />
       <Button layoutX="32.0" layoutY="59.0" mnemonicParsing="false" onAction="#detectDevicesButtonPressed" text="Detect Devices" />
+      <Button layoutX="32.0" layoutY="123.0" mnemonicParsing="false" onAction="#powerOnButtonPressed" text="Power on" />
+      <Button layoutX="32.0" layoutY="210.0" mnemonicParsing="false" onAction="#volumeDownButtonPressed" text="Volume down" />
+      <Button layoutX="32.0" layoutY="166.0" mnemonicParsing="false" onAction="#volumeUpButtonPressed" text="Volume up" />
    </children>
 </AnchorPane>
