--- a/src/main/resources/gui/fxml/mainFrame.fxml
+++ b/src/main/resources/gui/fxml/mainFrame.fxml
@@ -18,19 +18,77 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.MainFrameController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.MainFrameController">
    <children>
-      <Label layoutX="32.0" layoutY="30.0" text="Hello World, Onkyo AVR Control" />
-      <Button layoutX="32.0" layoutY="59.0" mnemonicParsing="false" onAction="#detectDevicesButtonPressed" text="Detect Devices" />
-      <Button layoutX="32.0" layoutY="123.0" mnemonicParsing="false" onAction="#powerOnButtonPressed" text="Power on" />
-      <Button layoutX="32.0" layoutY="210.0" mnemonicParsing="false" onAction="#volumeDownButtonPressed" text="Volume down" />
-      <Button layoutX="32.0" layoutY="166.0" mnemonicParsing="false" onAction="#volumeUpButtonPressed" text="Volume up" />
+      <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <center>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label layoutX="14.0" layoutY="24.0" text="Hello World, Onkyo AVR Control" />
+                  <Button disable="true" layoutX="15.0" layoutY="72.0" mnemonicParsing="false" onAction="#powerOnButtonPressed" text="Power on" />
+                  <Button disable="true" layoutX="101.0" layoutY="118.0" mnemonicParsing="false" onAction="#volumeDownButtonPressed" text="Volume down" />
+                  <Button disable="true" layoutX="11.0" layoutY="118.0" mnemonicParsing="false" onAction="#volumeUpButtonPressed" text="Volume up" />
+               </children>
+            </AnchorPane>
+         </center>
+         <left>
+            <ScrollPane hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <content>
+                  <BorderPane prefHeight="200.0" prefWidth="200.0">
+                     <center>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                           <children>
+                              <VBox fx:id="onkyoDeviceListContainer" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children>
+                        </AnchorPane>
+                     </center>
+                     <top>
+                        <HBox prefWidth="200.0" BorderPane.alignment="CENTER">
+                           <children>
+                              <Button alignment="CENTER" mnemonicParsing="false" onAction="#detectDevicesButtonPressed" text="Detect Devices" />
+                           </children>
+                           <padding>
+                              <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                           </padding>
+                        </HBox>
+                     </top>
+                  </BorderPane>
+               </content>
+            </ScrollPane>
+         </left>
+         <top>
+            <MenuBar BorderPane.alignment="CENTER">
+              <menus>
+                <Menu mnemonicParsing="false" text="File">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="Close" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Edit">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="Delete" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Help">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="About" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
+         </top>
+      </BorderPane>
    </children>
 </AnchorPane>
